# StructGen-rs

./: .gitignore  Cargo.toml  README.md  ca_all_rules_120w.yaml  ca_manifest.yaml
.github/workflows/: ci.yml  release.yml
.trae/documents/: nca-pretraining-from-npy.md
Code/: nca_generate_and_compare.py
Code/nca-pre-pretraining-main/: .gitignore  LICENSE  README.md  blog.html  environment.yml  requirements.txt
configs/: batch_generation.yaml
docs/: 2D3D元胞自动机扩展设计.md  CLI模块详细设计.md  NCA数据格式对比分析.md  NCA生成器对比文档.md  core模块详细设计.md  metadata模块详细设计.md  npy-batch-usage-guide.md  pipeline模块详细设计.md  scheduler模块详细设计.md  sink模块详细设计.md  元胞自动机著名规则.md  元胞自动机训练格式配置指南.md  开发规划.md  数据差异v1.md  查看器升级.md  概述.md  生成器详细设计.md  需求规格说明书.md
src/: main.rs
src/core/: error.rs  frame.rs  generator.rs  mod.rs  params.rs  registry.rs
src/generators/: boolean_network.rs  ca.rs  ca2d.rs  ca3d.rs  ca_common.rs  ca_rules.rs  formal_grammar.rs  ifs.rs  logistic.rs  lorenz.rs  lsystem.rs  mod.rs  nbody.rs  nca2d.rs  rng.rs  vm.rs
src/metadata/: logger.rs  mod.rs  progress.rs  recorder.rs  types.rs
src/pipeline/: batch_collector.rs  clip_stitcher.rs  dedup.rs  diff_encoder.rs  mod.rs  normalizer.rs  null_proc.rs  patch_tokenizer.rs  processor.rs  registry.rs  sequence_stitcher.rs  token_mapper.rs
src/scheduler/: executor.rs  manifest.rs  mod.rs  seed.rs  shard.rs
src/sink/: adapter.rs  binary.rs  factory.rs  mod.rs  npy.rs  npy_batch.rs  parquet.rs  text.rs
src/view/: app.rs  color.rs  frame_buffer.rs  mod.rs  render_1d.rs  render_2d.rs  render_3d.rs
tests/manifests/: bad_format.yaml  (+32 more)
(+103 files in other folders)
