[package]
name = "StructGen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
arrow = "53"
parquet = { version = "53", features = ["arrow"] }
rayon = "1"
serde_yaml = "0.9"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
