[package]
name = "StructGen-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "structgen-rs"
path = "src/main.rs"

[features]
default = []
view = ["eframe"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
arrow = "53"
parquet = { version = "53", features = ["arrow"] }
rayon = "1"
serde_yaml = "0.9"
sha2 = "0.10"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.34.2", optional = true }

[dev-dependencies]
tempfile = "3"
